# drag

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/db/: database.py  models.py
backend/app/routers/: api_keys.py  auth.py  keys.py  users.py  webhooks.py
backend/app/schemas/: keys.py  users.py
backend/app/services/: keys_service.py
backend/app/utils/: clerk.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ApiKeyDisplay.jsx  ApiKeyTable.jsx  ConfirmRevokeDialog.jsx  DisplayApiKeyDialog.jsx  GenerateApiKeyDialog.jsx  Navbar.jsx  RevokeApiKeyDialog.jsx
frontend/src/hooks/: useApiKeys.js
frontend/src/layouts/: RootLayout.jsx
frontend/src/pages/: ApiKeysPage.jsx  AuthenticationPage.jsx  HomePage.jsx  LandingPage.jsx  NotFoundPage.jsx  SignInPage.jsx  SignUpPage.jsx
frontend/src/store/: ApiKeyStore.js
