[project]
name = "backend"
version = "0.1.0"
description = "DRAG API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=3.0.3",
    "fastapi[standard]>=0.115.14",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "starlette>=0.46.2",
    "uvicorn>=0.34.3",
]
