[project]
name = "backend"
version = "0.1.0"
description = "DRAG API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=3.0.3",
    "fastapi[standard]>=0.115.14",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "supabase>=2.16.0",
    "svix>=1.68.0",
    "unkey-py>=0.10.0",
    "uvicorn>=0.34.3",
]
